[package]
name = "skyedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pokerust = "0.2.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

[profile.dev.package.pokerust]
debug-assertions = false
